# toDoApplication

./: CMakeLists.txt  LoginWindow.cpp  TodoWindow.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  src.cpp  todo.ui
data/UI/: loginwindow.ui  todo.ui
data/db/: user.db
implement/login/: LoginWindow.cpp  LoginWindow.h
implement/todo/: TodoWindow.cpp  TodoWindow.h
log/: Logger.cpp  Logger.h
utils/: EnvPath.cpp
utils/env/: EnvPath.cpp  EnvPath.h
